
Other:
- Change data type of grape.user_history.data to JSONB - thereby removing the need for the HSTORE extension
- Bumped package versions

1.0.8
- New config setting process_name sets the visible process(es) name(s)
- Removed "publicPath" from app settings (in favour of "public_directories")
- Notification subsystem
- New tool to set up a database: grape-db-setup
- User save will not change the password if it is not provided
- HTTPS support for GrapeClient (also applies to grape-query)
- Removed lookup schema and tables from grape (this includes: lookup.relationship, lookup.bank_branch and lookup.valid_bank_name)
- Process list API (/grape/process/list) will now return information about the most recently scheduled schedule, instead of totals

1.0.9
New features:
- Grape Secure Authentication: a new authentication scheme, based on Kerberos
- Handle CORS headers, as described in https://developer.mozilla.org/en-US/docs/Web/HTTP/Access_control_CORS
- Bumped pg to 7.2.0 (https://node-postgres.com/announcements#2017-08-12-code-execution-vulnerability)
- grape-db-setup can now read JSON file as config
- New view grape.v_pg_table_stats
- Roles and access paths from schema API calls is now automatically registered in the database upon startup
- New config option delayed_response will delay responses
- LDAP server (experimental)
- XML Body Parser

Minor changes:
- grape-db-setup better error messages
- New default role pg_stat (pg statistics monitoring)
- Use req.ip when logging in (instead of remoteConnection IP) in order to ensure the correct client IP when connecting through proxies
- PDF generator should catch DB errors
- New column notification_function.emitted_event_name
- Switch over to storing salted SHA256 (using 1000 rounds) passwords 
- Automatically add access roles and access paths from schema apis to DB upon startup
- New grape-manage command: reset_password used to reset a users password

Removed features:
- Removed deprecated API call "/session/new"

